# learning-langchain

./: .gitignore  main.py  pyproject.toml
chat_ollama/: __init__.py  app.py
chat_practice/: __init__.py  app.py
deep_tool/: app.py  build_model.py  utils.py
deep_tool/tools/: get_weather.py
deepseek_open_ai/: __init__.py  app1.py  utils.py
docs/: apuntes.md  core_lang.md  glosario.md  init_chat.md  kokoro.md  modelos.md  ollama.md  ollama_comand.md  tools.md
jarvis/: __init__.py  app.py  system_prompt.py
learning_tools/: handle_erro_model.py  handle_error.py  handle_error_2.py  nobody_agent.py
practices/: __init__.py  converstion.py  deepseek_1.py
utils/: __init__.py  clean_md.py  console_ui.py  ear.py  outputParse.py  voice.py
utils/art/: __init__.py  anime_1.py  gojo.py  satoru.py  skull.py  straw_cat.py
